<resources>
    <string name="app_name">PlatePal</string>
    <string name="recipe_image">Recipe image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="Register">Click Here To Register</string>
    <string name="emaillogin">Enter Email</string>
    <string name="show_full_recipe">Full recipe</string>
    <string name="favorite">Favorite</string>
    <string name="play_video">Video</string>
    <string name="hide_full_recipe">Hide full recipe</string>
    <string name="remove_favorite">Remove Favourite</string>
    <string name="close">Close</string>
    <string name="meal_name">Meal Name</string>

    <string name="about_text">
        This application is designed to make your cooking journey easier and more enjoyable. \n\n
        With our app, you can:\n
        - Search for any meal recipe with clear step-by-step instructions.\n
        - Get smart suggestions for random meals when you don’t know what to cook.\n
        - Discover recipes from different cuisines around the world.\n
        - Save your favorite meals and revisit them anytime.\n\n
        Our goal is to help you explore, cook, and enjoy delicious dishes effortlessly.\n\n
        Developed with passion by:\n
        - Kenzy Ashraf – kenzy2312\n
        - Menna Alaa – MennaT-T\n
        - Karim Hossam – Denzyy1
    </string>
    <string name="headertxt">What would you like to cook today?</string>
    <string name="contentDescription">Header image </string>
</resources>